syntax = "proto3";

package fileservice;

option go_package = "github.com/username/grpc-file-service/internal/gen;fileservice";

service FileService {
  rpc UploadFile(stream UploadRequest) returns (UploadResponse);
  rpc DownloadFile(DownloadRequest) returns (stream DownloadResponse);
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
}

message UploadRequest {
  string filename = 1;
  bytes data = 2;
}

message UploadResponse {
  string message = 1;
}

message DownloadRequest {
  string filename = 1;
}

message DownloadResponse {
  bytes data = 1;
}

message ListFilesRequest {}

message ListFilesResponse {
  repeated FileInfo files = 1;
}

message FileInfo {
  string filename = 1;
  string created_at = 2;
  string updated_at = 3;
}